hphp/hack/test/typecheck/ppl/class_inheritance2.php.exp
File "class_inheritance2.php", line 9, characters 7-16:
a class must be annotated with <<__PPL>> to extend <<__PPL>> class: BaseClass (Typing[4257])
File "class_inheritance2.php", line 6, characters 7-15:
Declaration is here
