hphp/hack/test/typecheck/ppl/class_inheritance2.php
<?hh // strict

// A ppl class can only be extended by another ppl class

<<__PPL>>
class BaseClass {
}

class ChildClass extends BaseClass {
}
